FIX: timing and visibility of particles

--- a/frontend/src/elements/particles/Particles.scss
+++ b/frontend/src/elements/particles/Particles.scss
@@ -2,32 +2,32 @@
 
 
 .Particles {
+    position: absolute;
+    overflow: hidden;
+    // background-color: red;
     width: 100%;
-    // height: 100%;
+    height: 100vh;
 }
 
 .circle-container {
-    $particleWidth: 10px;
-    $particleNum: 200;
-    $particleColor: hsl(180, 100%, 80%);
-
-    position: fixed;
-    transform: translateY(-10vh);
+    $particleWidth: 8px;
+    $particleNum: 30;
+    // $particleColor: hsl(180, 100%, 80%);
+    transform: translateY(0vh);
     animation-iteration-count: infinite;
     animation-timing-function: linear;
 
     .circle {
         overflow: hidden;
-
         width: 100%;
         height: 100%;
         border-radius: 50%;
         mix-blend-mode: screen;
         background-image: radial-gradient(hsl(180, 100%, 80%),
-                hsl(180, 100%, 80%) 10%,
+                hsl(0, 0%, 100%) 10%,
                 hsla(180, 100%, 80%, 0) 56%);
 
-        animation: fadein-frames 200ms infinite, scale-frames 2s infinite;
+        animation: fadein-frames 200ms infinite, scale-frames 4s infinite;
 
         @keyframes fade-frames {
             0% {
@@ -66,14 +66,16 @@
 
             $startPositionY: random(10)+100;
             $framesName: "move-frames-"+$i;
-            $moveDuration: 7000+random(4000)+ms;
-
+            $moveDuration: 14000+random(4000)+ms;
+            transform: scale3d(0, 0, 0);
             animation-name: #{$framesName};
             animation-duration: $moveDuration;
             animation-delay: random(11000) + ms;
 
             @keyframes #{$framesName} {
                 from {
+                    transform: scale3d(1, 1, 1);
+
                     transform: translate3d(#{random(100) + vw},
                         #{$startPositionY + vh},
                         0);
